--- a/index.html
+++ b/index.html
@@ -339,8 +339,8 @@
     <div class="carousel-inner">
       <div class="carousel-item active d-flex flex-column position-relative">
         <div class="d-flex   align-items-center div-h po">
-          <div class="d-block w-100 slider-img1" alt="..."></div>
-          <div
+          <img src="assets/banner_9.png" class="d-block w-100 slider-img1" alt="">
+         <div
             class="position-absolute col-lg-12 px-4 col-12  text-white d-flex mt-5 pt-5 flex-column justify-content-start ">
             <h6 class="text-col text-und text-start text col-lg-8 ">
               <svg xmlns="http://www.w3.org/2000/svg" width="60" class="rightarrow" height="6" viewBox="0 0 50 6">
@@ -368,9 +368,9 @@
 
       <div class="carousel-item d-flex flex-column  position-relative">
         <div class="d-flex  align-items-center div-h">
-          <div class="d-block w-100 slider-img2" alt="..."></div>
-
-          <div
+          <img src="assets/banner_10.png" class="d-block w-100 slider-img2" alt="">
+      
+    <div
             class="position-absolute col-lg-12 px-4 col-12  text-white d-flex mt-5 pt-5 flex-column justify-content-start ">
             <h6 class="text-col text-und text-start text col-lg-8 ">
               <svg xmlns="http://www.w3.org/2000/svg" width="60" class="rightarrow" height="6" viewBox="0 0 50 6">
@@ -585,31 +585,38 @@
   </div>
 
   <div class="container-fluid d-flex flex-wrap ">
-    <div class="col-lg-4 col-12 course-img1 course-img">
+    <div class="col-lg-4 col-12  course-img">
       <div class="hov position-relative">
-        <div class=" cardtt col-12  ">
-          <h5 class="text-white fw-bold fs-3 pb-4  col-10 mx-auto pt-5">Cybron Scout 6 Grade</h5>
-          <h6 class="text-white  text-justify  col-10 mx-auto fs-5">Learn and grab the root level knowledge and
-            understanding of Cyber Security, Curriculum develop according to requirement of Class 6th grade students.
+<img 
+          src="assets/cir_1.jpg" 
+           class="img-fluid w-100 course-img1 position-absolute h-100"  
+        />
+        <div class="cardtt col-12 position-absolute top-0 start-0 h-100">
+          <h5 class="text-white fw-bold fs-3 pb-4 col-10 mx-auto pt-5">Cybron Scout 6 Grade</h5>
+          <h6 class="text-white text-justify col-10 mx-auto fs-5">
+            Learn and grab the root level knowledge and understanding of Cyber Security, 
+            Curriculum develop according to requirement of Class 6th grade students.
           </h6>
           <div class="col-10 mx-auto mb-5">
             <a href="6thgrade.html" class="text-decoration-none col-12 mx-auto">
               <button
-                class="mt-5 text-decoration-none btn3 bg-transparent text-white  shadow-none  p-2 d-flex flex-row align-items-center justify-content-center">
-                DSISCOVER NOW
+                class="mt-5 text-decoration-none btn3 bg-transparent text-white shadow-none p-2 d-flex flex-row align-items-center justify-content-center">
+                DISCOVER NOW
                 <i class="fa-solid fa-paper-plane icon-hover fs-6"></i>
-
               </button>
-
             </a>
           </div>
-
         </div>
       </div>
     </div>
-    <div class="col-lg-4 col-12 course-img2 course-img">
+    
+    <div class="col-lg-4 col-12 course-img">
       <div class="hov position-relative">
-        <div class=" cardtt col-12  ">
+        <img 
+        src="assets/cir_2.jpg" 
+         class="img-fluid w-100 course-img1 position-absolute h-100"  
+      />
+        <div class=" cardtt col-12  position-absolute top-0 start-0 h-100">
           <h5 class="text-white fw-bold fs-3 pb-4  col-10 mx-auto pt-5">Cybron Scout 7 Grade</h5>
           <h6 class="text-white  text-justify  col-10 mx-auto fs-5">Learn and grab the root level knowledge and
             understanding of Cyber Security, Curriculum develop according to requirement of Class 7th grade students.
@@ -629,9 +636,13 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-4 col-12 course-img3 course-img">
+    <div class="col-lg-4 col-12  course-img">
       <div class="hov position-relative">
-        <div class=" cardtt col-12  ">
+        <img 
+        src="assets/cir_4.jpg" 
+         class="img-fluid w-100 course-img1 position-absolute h-100"  
+      />
+        <div class=" cardtt col-12  position-absolute top-0 start-0 h-100">
           <h5 class="text-white fw-bold fs-3 pb-4  col-10 mx-auto pt-5">Cybron Scout 8 Grade</h5>
           <h6 class="text-white  text-justify  col-10 mx-auto fs-5">Learn and grab the root level knowledge and
             understanding of Cyber Security, Curriculum develop according to requirement of Class 8th grade students.
@@ -651,9 +662,13 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-4 col-12 course-img4 course-img">
+    <div class="col-lg-4 col-12 course-img">
       <div class="hov position-relative">
-        <div class=" cardtt col-12  ">
+        <img 
+        src="assets/cir_5.jpg" 
+         class="img-fluid w-100 course-img1 position-absolute h-100"  
+      />
+        <div class=" cardtt col-12  position-absolute top-0 start-0 h-100">
           <h5 class="text-white fw-bold fs-3 pb-4  col-10 mx-auto pt-5">Cybron Scout 9 Grade</h5>
           <h6 class="text-white  text-justify  col-10 mx-auto fs-5">Learn and grab the root level knowledge and
             understanding of Cyber Security, Curriculum develop according to requirement of Class 9th grade students.
@@ -673,9 +688,13 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-4 col-12 course-img5 course-img">
+    <div class="col-lg-4 col-12 course-img">
       <div class="hov position-relative">
-        <div class=" cardtt col-12  ">
+        <img 
+        src="assets/cir_6.jpg" 
+         class="img-fluid w-100 course-img1 position-absolute h-100"  
+      />
+        <div class=" cardtt col-12  position-absolute top-0 start-0 h-100">
           <h5 class="text-white fw-bold fs-3 pb-4  col-10 mx-auto pt-5">Cybron Scout 10 Grade</h5>
           <h6 class="text-white  text-justify  col-10 mx-auto fs-5">Learn and grab the root level knowledge and
             understanding of Cyber Security, Curriculum develop according to requirement of Class 10th grade students.
@@ -695,10 +714,14 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-4 col-12 course-img6 course-img">
+    <div class="col-lg-4 col-12  course-img">
       <div class="hov position-relative">
-        <div class=" cardtt col-12  ">
-          <h5 class="text-white fw-bold fs-3 pb-4  col-10 mx-auto pt-5">Cybron Scout 9 & 10 Grade</h5>
+        <img 
+        src="assets/cir_7.jpg" 
+         class="img-fluid w-100 course-img1 position-absolute h-100"  
+      />
+        <div class=" cardtt col-12 position-absolute top-0 start-0 h-100 ">
+          <h5 class="text-white fw-bold fs-3 pb-4  col-10 mx-auto pt-5">Cybron Scout 11th & 12th grade</h5>
           <h6 class="text-white  text-justify  col-10 mx-auto fs-5">Learn and grab the root level knowledge and
             understanding of Cyber Security, Curriculum develop according to requirement of Class 11th & 12th grade
             students.
@@ -926,14 +949,14 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-6 col-12"><img src="assets/faqs-x8Ac__aX.webp" class="img-fluid col-12" alt="" srcset=""></div>
+    <div class="col-lg-6 col-12"><img src="assets/faqs-image.webp" class="img-fluid col-12" alt="" srcset=""></div>
   </div>
   <!-- FAQS -->
   <!-- CONTACT-US -->
 
 
-  <div class="container-fluid d-flex flex-lg-row flex-column justify-content-between  mx-0  py-5 contact-page">
-
+  <div class="container-fluid d-flex flex-lg-row flex-column justify-content-between position-relative  mx-0  py-5 contact-page">
+<img src="assets/contact.png" class="img-fluid contact-bg-img " alt="" >
     <div class="col-lg-6 d-flex flex-row align-items-center col-12  rounded ">
       <!-- <iframe width="100%" height="100%" class="position-absolute top-0 start-0" frameborder="0" title="map" marginheight="0" marginwidth="0" scrolling="no" src="https://maps.google.com/maps?width=100%&height=600&hl=en&q=%C4%B0zmir+(My%20Business%20Name)&ie=UTF8&t=&z=14&iwloc=B&output=embed" style="filter:  opacity(0.5);"></iframe> -->
       <div class="col-12  d-flex flex-column px-1 rounded ">
